fixed first row img on small screens

--- a/csce242/assignments/03-page-layout/styles.css
+++ b/csce242/assignments/03-page-layout/styles.css
@@ -132,3 +132,9 @@ body {
         display: block;
     }
 }
+@media (max-width: 767px) {
+    .first-row-image {
+        width: 180px;
+        margin: auto;
+    }
+}
